--- a/index.html
+++ b/index.html
@@ -9,22 +9,38 @@
 </head>
 
 <body>
-    <header>
-        <h1>Estudos Javascript</h1>
-    </header>
-    <main>
-        <section>
-            <input type="text" placeholder="Digite sua dúvida" id="campo-pesquisa">
-            <button onclick="pesquisar()">Pesquisar</button>
-        </section>
-        <section class="resultados-pesquisa" id="resultados-pesquisa">
-        </section>
-    </main>
-    <footer>
-        <p>2024 - Estudos JavaScript. Todos os direitos reservados</p>
-    </footer>
-    <script src="dados.js"></script>
-    <script src="app.js"></script>
+  <header>
+    <h1>Estudos Javascript</h1>
+  </header>
+  <main>
+    <section>
+      <input type="text" placeholder="Digite sua dúvida" id="campo-pesquisa">
+      <button onclick="pesquisar()">Pesquisar</button>
+    </section>
+    <section class="resultados-pesquisa" id="resultados-pesquisa">
+    </section>
+  </main>
+  <footer>
+    <p>2024 - Estudos JavaScript. Todos os direitos reservados</p>
+  </footer>
+  <script src="dados.js"></script>
+  <script src="app.js"></script>
 </body>
-
 </html>
+
+<script>
+  const campoPesquisa = document.getElementById('campo-pesquisa');
+  const btnPesquisar = document.getElementById('btnPesquisar');
+
+  campoPesquisa.addEventListener('keypress', (event) => {
+    if (event.key === 'Enter') {
+      pesquisar();
+    }
+  });
+
+  // Função pesquisar (já existente em app.js)
+  function pesquisar() {
+    // Lógica da sua pesquisa
+    console.log('Você pesquisou por:', campoPesquisa.value);
+  }
+</script>
